# internal/handlers/get_song_by_name.go
@@ -9,6 +9,17 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// GetSongByName godoc
+// @Summary Retrieves a song by name
+// @Description Fetches a song from the database by its name and returns it as an HTML page.
+// @Tags Songs
+// @Accept json
+// @Produce html
+// @Param song path string true "Song Name"
+// @Success 200 {string} string "HTML page with song details"
+// @Failure 404 {object} models.ErrorResponse "Song not found"
+// @Failure 500 {object} models.ErrorResponse "Failed to retrieve song"
+// @Router /song/{song} [get]
 func GetSongByName(db *sql.DB) gin.HandlerFunc {
 	return func(c *gin.Context) {
 		log.Println("[INFO] Starting song retrieval process...")
